--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "example": "examples"
   },
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/psfonseka/GSVPanoDepth.js/issues"
   },
-  "homepage": "https://github.com/psfonseka/GSVPanoDepth.js#readme"
+  "homepage": "https://github.com/psfonseka/GSVPanoDepth.js#readme",
+  "dependencies": {
+    "live-server": "^1.2.1",
+    "nodemon": "^2.0.13"
+  }
 }
