--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "test",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,6 @@
   },
   "homepage": "https://github.com/psfonseka/GSVPanoDepth.js#readme",
   "dependencies": {
-    "live-server": "^1.2.1",
-    "nodemon": "^2.0.13"
+    "live-server": "^1.2.1"
   }
 }
